fix tracing, swagger and some tidy plus fix some tests